--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ gems: [jekyll-paginate]
 permalink: /:year/:month/:day/:title.html
 paginate: 10
 encoding: utf-8
-markdown: rdiscount
+markdown: kramdown
 
 # author
 author: 
