--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author:
 # site info
 title: Clive's blog
 description: My personal blog
-url: "http://clivexc.github.io/Blog"
+url: "http://clivexc.github.io/Blog/"
 rss_url: /pages/atom.xml
 
 # gavatar
