--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ highlighter: pygments
 github: [Repository metadata]
 safe: true
 lsi: false
+source: Blog
 
 gems: [jekyll-paginate]
 permalink: /:year/:month/:day/:title.html
@@ -13,7 +14,7 @@ markdown: kramdown
 author: 
   name: Clive Xu
   email: "clive_xc@163.com"
-  link: "http://clivexc.github.io/Blog"
+  link: "http://clivexc.github.io/Blog/"
   weibo: "http://weibo.com/clivexc"
   github: "https://github.com/clivexc"
 
