--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author:
 # site info
 title: Clive's blog
 description: My personal blog
-url: 
+url: "http://clivexc.github.io"
 baseurl: /blog
 rss_url: /blog/pages/atom.xml
 
